# art_admin_backend/internal/dto/response/auth_res.go
@@ -8,11 +8,15 @@ type LoginResponse struct {
 
 // UserInfoResponse 用户信息响应
 type UserInfoResponse struct {
-	UserID   int64    `json:"userId" example:"1"`
-	UserName string   `json:"userName" example:"admin"`
-	Email    string   `json:"email" example:"admin@example.com"`
-	Avatar   string   `json:"avatar" example:"https://..."`
-	Roles    []string `json:"roles" example:"admin,user"`
-	Buttons  []string `json:"buttons" example:"user:add,user:edit"`
+	UserID     int64    `json:"userId" example:"1"`
+	UserName   string   `json:"userName" example:"admin"`
+	NickName   string   `json:"nickName" example:"管理员"`
+	Email      string   `json:"email" example:"admin@example.com"`
+	UserPhone  string   `json:"userPhone" example:"13800138000"`
+	UserGender string   `json:"userGender" example:"male"`
+	Avatar     string   `json:"avatar" example:"https://..."`
+	Address    string   `json:"address" example:"广东省深圳市"`
+	Des        string   `json:"des" example:"个人介绍"`
+	Roles      []string `json:"roles" example:"admin,user"`
+	Buttons    []string `json:"buttons" example:"user:add,user:edit"`
 }
-
